# Projet-JARVIS

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  fait.md  jarvis.py  jarvis.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.opencode/: opencode.json  protocoles-codage.md
agents/: __init__.py  base.py  cyber.py  factory.py  generic.py  supervisor.py  vision.py
config/: __init__.py  adapters.yaml  agent_profiles.json  agent_routing.yaml  bootstrap.py  constants.py  cyber_workflow_keywords.yaml  cyber_workflows.json  diagnostic_tools.yaml  logging.yaml  model_sizes.json  paths.py  skills.json  toolbox_triggers.yaml
controllers/: context.py  di.py  middlewares.py  responses.py  router.py  static_cache.py  warmup.py
docs/: DEVELOP.md  RUNBOOK.md  architecture.md  inventory-dead-code.md  restauration.md
graph/: __init__.py  agent_graph.py
launchers/: JARVIS.bat  JARVIS.sh
models/: __init__.py  schemas.py
ports/: __init__.py  pipeline.py
scripts/: add_missing_docstrings.py  backup.ps1  backup.sh  build_snapshot.py  check_api_contract.py  check_openapi_contract.py  fuzz_payloads.py  install.py  install_portable_python.py  jarvis_doctor.py  restore_backup.py  run_integration_tests.bat  run_integration_tests.sh  schedule_backup.py  validate_state_model.py
services/: __init__.py  analysis.py  analysis_audit.py  analysis_core.py  analysis_maintainability.py  analysis_performance.py  analysis_report.py  analytics.py  (+30 more)
(+169 files in other folders)
