[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-portable"
version = "5.4"
description = "JARVIS Portable Edition — 5 agents IA locaux (MVC + Ports)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1,<0.136",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "numpy>=2.4",
    "psutil>=7.2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["agents", "config", "controllers", "graph", "models", "ports", "services"]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"scripts/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--basetemp=.pytest-temp"]

[tool.coverage.run]
omit = ["tests/*"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true
